<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:background="@color/black"
    android:paddingRight="16dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/SignUpWelcome"

        android:textColor="@color/orange"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="200dp"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:hint="@string/fName"
        android:inputType="textPersonName"
        android:textColor="@color/orange" />
    <EditText
        android:id="@+id/lName"
        android:textColorHint="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/lName"
        android:inputType="textPersonName"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        />
    <EditText
        android:id="@+id/email"
        android:textColorHint="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="250dp"
        />

    <EditText
        android:id="@+id/password"
        android:textColorHint="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Password1"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        />
    <EditText
        android:id="@+id/password1"
        android:textColorHint="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Password2"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="350dp"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="200dp"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Age"
        android:inputType="number"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="400dp"
        />

    <EditText
        android:id="@+id/height"
        android:textColorHint="@color/black"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Height"
        android:inputType="number"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="450dp"
        />
    <EditText
        android:id="@+id/weight"
        android:layout_width="200dp"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/Weight"
        android:inputType="number"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="500dp"
        />
    <Button
        android:id="@+id/signUp1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/orange"
        android:text="@string/SignUpWelcome"
        android:textColor="@color/white"
        android:layout_marginTop="550dp"
        android:layout_marginStart="25dp"
        />
    <TextView
        android:id="@+id/alreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/AlreadyUser"
        android:layout_marginTop="600dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/orange"
        android:textSize="15sp"
        />
    <?ignore
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif"
        android:text="@string/UserName"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"/>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/Password"
        android:textColor="@color/orange"
        android:textSize="18sp"
        />

        ?>
</RelativeLayout>