<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:background="@color/black"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/WelcomeScreen"

        android:textColor="@color/orange"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="sans-serif"
        android:text="@string/UserName"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="25dp"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="200dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/orange" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/Password"
        android:textColor="@color/orange"
        android:textSize="18sp"
 />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/orange"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
   />

    <Button
        android:id="@+id/signIn1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/orange"
        android:text="@string/SignIn"
        android:textColor="@color/white"
        android:layout_marginTop="350dp"
        android:layout_marginStart="25dp"
/>
    <TextView
        android:id="@+id/signUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/SignUp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/orange"
        android:textSize="15sp"
        />

</RelativeLayout>